# morpheus-examples

./: README.md  TODO.md
client/hero/: README.md  hero.cabal
client/hero/src/: Hero.hs  Main.hs
server/basic/: LICENSE  basic.cabal
server/basic/src/: Main.hs
server/basic/src/Mythology/: API.hs  Character.hs  Extra.hs  Place.hs
server/sophisticated/: README.md  cabal.project  sophisticated.cabal
server/sophisticated/src/: Main.hs
server/sophisticated/src/Sophisticated/: API.hs
