cabal-version:
  >=1.10

name:
  api

version:
  0.1.0.0

synopsis:
  Morpheus GraphQL Basic Server Example

description:
  This is a basic example demonstrating how to serve up a query with Morpheus-GraphQL.

bug-reports:
  https://github.com/heath/morpheus-examples/issues

license:
  MIT

license-file:
  LICENSE

copyright:
  (c) 2019-2020 Heath Matlock

author:
  Heath Matlock

category:
  web

maintainer:
  heath.matlock@gmail.com

build-type: 
  Simple

extra-source-files:
  CHANGELOG.md
  README.md

executable basic
  main-is:
    Main.hs
  hs-source-dirs:
    src
  other-modules:
      Mythology.API
    , Mythology.Character
    , Mythology.Place
  build-depends:
      base >=4.12 && <4.13
    , bytestring
    , morpheus-graphql
    , scotty
    , text
    , wai
    , warp
  default-language:
    Haskell2010
