cabal-version:
  >=2.0

name:
  api

version:
  0.1.0.0

synopsis:
  Morpheus GraphQL Sophisticated Server Example

description:
  This is an elaborate example demonstrating all available features available for Morpheus-GraphQL on the server.

bug-reports:
  https://github.com/heath/morpheus-examples/issues

license:
  MIT

license-file:
  LICENSE

copyright:
  (c) 2020 Heath Matlock

author:
  Heath Matlock

category:
  web

maintainer:
  heath.matlock@gmail.com

build-type:
  Simple

extra-source-files:
  CHANGELOG.md
  README.md

executable sophisticated
  main-is:
    Main.hs
  hs-source-dirs:
    src
  other-modules:
    Sophisticated.API
  build-depends:
      base ^>= 4.12.0
    , containers
    , morpheus-graphql
    , mtl
    , scotty
    , text
    , wai
    , wai-websockets
    , warp
    , websockets
  default-language:
    Haskell2010
